modifie phrase footer + bug page help

--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -8,16 +8,19 @@
 			<div class="">
 				<span> Rechercher dans:</span>
 				<div class="field">
-					<input name="user[remember_me]" type="hidden" value="0"><input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me">
-				    <label for="user_remember_me">FAQ</label>
+					<input name="user[remember_me]" type="hidden" value="0">
+					<input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me">
+				  <label for="user_remember_me">FAQ</label>
 				</div>
 				<div class="field">
-					<input name="user[remember_me]" type="hidden" value="0"><input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me">
-				    <label for="user_remember_me">Communauté Climateriaux</label>
+					<input name="user[remember_me]" type="hidden" value="0">
+					<input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me">
+				  <label for="user_remember_me">Communauté Climateriaux</label>
 				</div>
 				<div class="field">
-					<input name="user[remember_me]" type="hidden" value="0"><input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me">
-				    <label for="user_remember_me">Tutoriels</label>
+					<input name="user[remember_me]" type="hidden" value="0">
+					<input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me">
+				  <label for="user_remember_me">Tutoriels</label>
 				</div>
 			</div>
 		</form>
