--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,8 +13,8 @@
       </div>
       <div class="rassurance col-md-8 col-sm-24">
         <%= image_tag 'echange.svg' %>
-        <h3>Retour sous 10 jours</h3>
-        <p>Pas convaincu de votre commande ? Tous les produits peuvent être retournés pendant une durée de 15 jours</p>
+        <h3>Retour sous 30 jours</h3>
+        <p>Pas convaincu de votre commande ? Tous les produits peuvent être retournés pendant une durée de 30 jours</p>
       </div>
     </div>
   </div>
@@ -99,7 +99,7 @@
       </div>
        <div class="col-md-6 col-sm-8 hidden-xs">
           <h3>Qui sommes-nous ?</h3>
-          <p>Lorem ipsum dolor sit amet madmoizelle lorem dola rosae mail contacter notre service client, un conseiller est disponible lundi.</p>
+          <p>Climatériaux est une marketplace spécialisée en matériaux écologiques pour la rénovation énergétique du bâtiment et la construction d'éco-habitats, ainsi qu’en dispositifs à basse consommation et production d’énergie</p>
           <a href="#">En savoir plus</a>
       </div>
       <div class="newsletter col-md-6 col-sm-24">
