--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -26,7 +26,8 @@
 		</form>
 	</div>
 	<section class="list-section">
-		<div class="img-top-help"></div>
+		<%= image_tag("help_top.svg") %>
+		<!--<img src=" " class="img-top-help">-->
 		<div class="link-list">
 			<div class="container">
 				<ul class="row">
@@ -75,7 +76,8 @@
 				</ul>
 			</div>
 		</div>
-		<div class="img-bottom-help"></div>
+		<%= image_tag("help_bottom.svg") %>
+		<!--<div class="img-bottom-help"></div>-->
 	</section>
 	<section class="user-link-help">
 		<div class="container">
